--- a/WebMvc/WebMvc.csproj
+++ b/WebMvc/WebMvc.csproj
@@ -2532,6 +2532,24 @@
     <Content Include="Themes\Gland\Content\script\scrollToFixed.js" />
     <Content Include="Themes\Gland\Content\script\style.css" />
     <Content Include="Themes\Gland\Content\script\style222a89d.css" />
+    <Content Include="Themes\Classiera\Content\css\den-chinh-hang-9a5ab4.webflow.css" />
+    <Content Include="Themes\Classiera\Content\css\owl.carousel.min.css" />
+    <Content Include="Themes\Classiera\Content\css\webflow.css" />
+    <Content Include="Themes\Classiera\Content\images\BgBanner.jpg" />
+    <Content Include="Themes\Classiera\Content\images\menu.png" />
+    <Content Include="Themes\Classiera\Content\images\phone.png" />
+    <Content Include="Themes\Classiera\Content\images\zalo.jpg" />
+    <Content Include="Themes\Classiera\Content\js\jquery-2-2-0.min.js" />
+    <Content Include="Themes\Classiera\Content\js\jquery-migrate.min.js" />
+    <Content Include="Themes\Classiera\Content\js\jquery.js" />
+    <Content Include="Themes\Classiera\Content\js\owl.carousel.min.js" />
+    <Content Include="Themes\Classiera\Content\js\plugins.js" />
+    <Content Include="Themes\Classiera\Content\js\script.js" />
+    <Content Include="Themes\Classiera\Content\js\ShoppingCart.js" />
+    <Content Include="Themes\Classiera\Content\js\webflow.js" />
+    <Content Include="Themes\Classiera\Content\Logo\denchinhhang4.png" />
+    <Content Include="Themes\Classiera\Content\plug\load.gif" />
+    <Content Include="Themes\Classiera\Content\plug\script.js" />
     <Content Include="Themes\LIGHTNA\Content\css\den-chinh-hang-9a5ab4.webflow.css" />
     <Content Include="Themes\LIGHTNA\Content\css\owl.carousel.min.css" />
     <Content Include="Themes\LIGHTNA\Content\css\webflow.css" />
@@ -2540,7 +2558,10 @@
     <Content Include="Themes\LIGHTNA\Content\images\phone.png" />
     <Content Include="Themes\LIGHTNA\Content\images\zalo.jpg" />
     <Content Include="Themes\LIGHTNA\Content\js\jquery-2-2-0.min.js" />
+    <Content Include="Themes\LIGHTNA\Content\js\jquery-migrate.min.js" />
+    <Content Include="Themes\LIGHTNA\Content\js\jquery.js" />
     <Content Include="Themes\LIGHTNA\Content\js\owl.carousel.min.js" />
+    <Content Include="Themes\LIGHTNA\Content\js\plugins.js" />
     <Content Include="Themes\LIGHTNA\Content\js\script.js" />
     <Content Include="Themes\LIGHTNA\Content\js\ShoppingCart.js" />
     <Content Include="Themes\LIGHTNA\Content\js\webflow.js" />
@@ -2651,6 +2672,48 @@
     <Content Include="Themes\MAXCONSTRUCTION\Views\Shared\_StyleSheets.cshtml" />
     <Content Include="Themes\MAXCONSTRUCTION\Views\Shared\_JavaScript.cshtml" />
     <Content Include="Themes\MAXCONSTRUCTION\Views\Home\Index.cshtml" />
+    <Content Include="Themes\Classiera\config.json" />
+    <Content Include="Themes\Classiera\Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Themes\Classiera\Views\_ViewStart.cshtml" />
+    <Content Include="Themes\Classiera\Views\Cart\Commit.cshtml" />
+    <Content Include="Themes\Classiera\Views\Cart\Index.cshtml" />
+    <Content Include="Themes\Classiera\Views\Cart\Success.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\_CatTopNews.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\_ProductItem.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\Index.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\ListCategorySideMenu.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\Show.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\ShowBySlug.cshtml" />
+    <Content Include="Themes\Classiera\Views\Category\ShowBySlugProduct.cshtml" />
+    <Content Include="Themes\Classiera\Views\Contact\Index.cshtml" />
+    <Content Include="Themes\Classiera\Views\Contact\Ok.cshtml" />
+    <Content Include="Themes\Classiera\Views\Home\_CategoryNewProduct.cshtml" />
+    <Content Include="Themes\Classiera\Views\Home\Index.cshtml" />
+    <Content Include="Themes\Classiera\Views\Home\Slider.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\_Paging1.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\_ProductItem.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\_ProductItem2.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\AjaxProductForClass.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\index.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\ShowByGroupSlug.cshtml" />
+    <Content Include="Themes\Classiera\Views\Product\ShowBySlug.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_CatNews.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Footer.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Header.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Header1.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Header2.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_JavaScript.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Layout.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Menu.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Paging.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_ProductItem.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_Sidebar.cshtml" />
+    <Content Include="Themes\Classiera\Views\Shared\_StyleSheets.cshtml" />
+    <Content Include="Themes\Classiera\Views\Topic\Create.cshtml" />
+    <Content Include="Themes\Classiera\Views\Topic\Index.cshtml" />
+    <Content Include="Themes\Classiera\Views\Topic\ShowBySlug.cshtml" />
+    <Content Include="Themes\Classiera\Views\Web.config" />
+    <Content Include="Themes\Classiera\route.json" />
     <None Include="Themes\NewsBlue\Content\js\wp-json.json" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
